# furaxel

./: Cargo.toml  README.md
assets/shaders/: water_material.wgsl
assets/textures/: default.aseprite  dirt.aseprite  flower_yellow.aseprite  grass.aseprite  grass_side.aseprite  red_flower.aseprite  sand.aseprite  stone.aseprite
src/: main.rs
src/debug/: fps_monitor.rs  mod.rs
src/voxel_world/: chunk.rs  chunk_map.rs  chunking.rs  meshing.rs  mod.rs  player.rs  terrain_chunk.rs  terrain_generation.rs  voxel.rs
src/voxel_world/core/: chunk.rs  chunk_map.rs  chunk_range.rs  components.rs  coordinates.rs  events.rs  mod.rs  terrain_chunk.rs  voxel.rs
src/voxel_world/pipelines/: mod.rs
src/voxel_world/pipelines/cpu_mesh/: material.rs  mod.rs  water.rs
src/voxel_world/pipelines/cpu_noise/: biomes.rs  feature.rs  generation.rs  mod.rs  storage.rs
src/voxel_world/pipelines/rendering/: material.rs  meshing.rs  mod.rs
src/voxel_world/pipelines/terrain_generation/: biomes.rs  generation.rs  mod.rs
src/voxel_world/player/: mod.rs
src/voxel_world/rendering/: material.rs  meshing.rs  mod.rs
src/voxel_world/storage/: cpu_chunk_map.rs  mod.rs
src/voxel_world/terrain_generation/: README.md  biomes.rs  feature.rs  generation.rs  mod.rs  storage.rs
