[package]
name = "furaxel"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.3"
bevy-inspector-egui = "0.35.0"
bevy_flycam = "0.17.0"
block-mesh = "0.2.0"
itertools = "0.14.0"
ndarray = "0.17.1"

# dev profileでは最適化を少なくする
[profile.dev]
opt-level = 1

# dev profileでも外部のライブラリの最適化は多くする
[profile.dev.package."*"]
opt-level = 3
