[package]
name = "furaxel"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3" , features = ["file_watcher"] }
bevy-inspector-egui = "0.35.0"
bevy_aseprite_ultra = "0.7.0"
bevy_flycam = "0.17.0"
block-mesh = "0.2.0"
itertools = "0.14.0"
ndarray = "0.17.1"
noise = "0.9.0"
rand = "0.9.2"
